--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^7.0.1",
-    "next": "12.2.5",
+    "next": "^14.1.3",
     "next-auth": "^4.12.0",
     "query-string": "^7.1.1",
     "react": "18.2.0",
@@ -19,10 +19,13 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/node": "^20.11.29",
+    "@types/react": "^18.2.67",
     "autoprefixer": "^10.4.8",
-    "eslint": "8.21.0",
+    "eslint": "^8.21.0",
     "eslint-config-next": "12.2.4",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "typescript": "^5.4.2"
   }
 }
